--- a/manifests/inference-service.yaml
+++ b/manifests/inference-service.yaml
@@ -11,12 +11,17 @@ spec:
         version: "1"
       runtime: llm-runtime
       args:
-        - --model_name=llama3.2-3B
-        - --model_id=meta-llama/Llama-3.2-3B-Instruct
+        - --model_name=llama3.1-8B
+        - --model_id=RedHatAI/Llama-3.1-8B-Instruct
         - --backend=vllm
+        - --max-model-len=32768
+        - --gpu-memory-utilization=0.90
+        - --enable-auto-tool-choice
+        - --tool-call-parser=llama3_json
+        - --enable-tool-call-parser
       env:
         - name: HF_TOKEN
-          value: ""
+          value: hf_token
         - name: CUDA_VISIBLE_DEVICES
           value: "0"
       resources:
