--- a/.gitignore
+++ b/.gitignore
@@ -144,6 +144,7 @@ ENV/
 env.bak/
 venv.bak/
 my_env/
+temp/
 
 # Spyder project settings
 .spyderproject
@@ -208,4 +209,5 @@ marimo/_lsp/
 __marimo__/
 
 #kfp
-pipelines/github_rag_pipeline.yaml
+pipelines/
+test/
