fix: replace hardcoded namespace in manifests, pipelines, deployment.yaml and virtualservice.yaml
Signed-off-by: Mayank Jha <mayankjha0330@gmail.com>

--- a/manifests/milvus-deployment.yaml
+++ b/manifests/milvus-deployment.yaml
@@ -10,7 +10,7 @@ metadata:
     app: milvus-standalone-final
     pod-template-hash: 5cb655b8d6
   name: milvus-standalone-final-5cb655b8d6-6ngrn
-  namespace: santhosh
+  namespace: docs-agent
   ownerReferences:
   - apiVersion: apps/v1
     blockOwnerDeletion: true
