--- a/pipelines/github_rag_incremental_pipeline.yaml
+++ b/pipelines/github_rag_incremental_pipeline.yaml
@@ -8,7 +8,7 @@
 #    chunk_size: int [Default: 1200.0]
 #    collection_name: str [Default: 'docs_rag']
 #    github_token: str [Default: '']
-#    milvus_host: str [Default: 'milvus-standalone-final.santhosh.svc.cluster.local']
+#    milvus_host: str [Default: 'milvus-standalone-final.docs-agent.svc.cluster.local']
 #    milvus_port: str [Default: '19530']
 #    repo_name: str [Default: 'website']
 #    repo_owner: str [Default: 'kubeflow']
@@ -476,7 +476,7 @@ root:
         isOptional: true
         parameterType: STRING
       milvus_host:
-        defaultValue: milvus-standalone-final.santhosh.svc.cluster.local
+        defaultValue: milvus-standalone-final.docs-agent.svc.cluster.local
         isOptional: true
         parameterType: STRING
       milvus_port:
