feat(agent): Implement GSoC Agentic RAG Architecture
        - Added LangGraph-based agent logic in server/agent.py
        - Implemented tools for Doc search and GitHub Issues in server/tools.py
        - Updated server/app.py to use LangGraph with streaming support
        - Created modular KFP components in pipelines/components/
        - Added Golden Data pipeline for ingestion
        - Configured Scale-to-Zero for KServe in manifests/
        - Added Terraform scripts for OCI deployment

--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,13 +1,12 @@
-# Core dependencies
+fastapi
+uvicorn
 websockets
-httpx
-
-# Milvus client
 pymilvus
-
-# Optimized ML dependencies - use lighter alternatives
 sentence-transformers
-torch --extra-index-url https://download.pytorch.org/whl/cpu
-
-# Essential only
-numpy
+httpx
+requests
+pydantic
+langchain
+langchain-openai
+langgraph
+langchain-community
