--- a/manifests/inference-service.yaml
+++ b/manifests/inference-service.yaml
@@ -3,8 +3,12 @@ kind: InferenceService
 metadata:
   name: llama
   namespace: santhosh
+  annotations:
+    serving.kserve.io/enable-metric-aggregation: "true"
+    serving.kserve.io/enable-prometheus-scraping: "true"
 spec:
   predictor:
+    minReplicas: 0
     model:
       modelFormat:
         name: huggingface
