Added Kagent related code and a Setup to test kagents on local using a hosted LLM provider that supports openai format
Signed-off-by: SanthoshToorpu <toorpusanthosh@gmail.com>

--- a/pipelines/requirements.txt
+++ b/pipelines/requirements.txt
@@ -1,16 +1,9 @@
-# Kubeflow Pipeline Dependencies
 kfp
-
-# Data Processing
 requests
 beautifulsoup4
-
-# Machine Learning & Embeddings
 sentence-transformers
-langchain
+langchain-text-splitters
 torch
-
-# Vector Database
-pymilvus
+feast[milvus]
+pandas
 numpy
-
