--- a/.gitignore
+++ b/.gitignore
@@ -208,5 +208,13 @@ marimo/_static/
 marimo/_lsp/
 __marimo__/
 
-#kfp
+# KFP
 test/
+
+# Feast artifacts
+feast_repo/data/
+feast_repo/registry.db
+
+# Compiled pipeline YAML
+pipelines/*.yaml
+!pipelines/README.md
