--- a/kagent-feast-mcp/mcp-server/Dockerfile
+++ b/kagent-feast-mcp/mcp-server/Dockerfile
@@ -3,13 +3,13 @@ FROM python:3.10-slim
 WORKDIR /app
 
 COPY mcp-server/requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install -r requirements.txt
+
+# Pre-download the embedding model so it's baked into the image
+RUN python -c "from sentence_transformers import SentenceTransformer; SentenceTransformer('sentence-transformers/all-mpnet-base-v2')"
 
 COPY mcp-server/server.py .
-COPY feast_repo/ feast_repo/
 
-ENV FEAST_REPO_PATH=/app/feast_repo
-ENV EMBEDDING_MODEL=sentence-transformers/all-mpnet-base-v2
 ENV PORT=8000
 
 EXPOSE 8000
