ci: fix kubeconform failing on custom resource definitions and resolve syntax constraint warnings in docker checks
Signed-off-by: alokdangre <alokdangre@gmail.com>

--- a/.github/workflows/pr-verify-docker.yaml
+++ b/.github/workflows/pr-verify-docker.yaml
@@ -45,7 +45,7 @@ jobs:
           fi
 
       - name: Validate Container Build (${{ matrix.image_name }})
-        if: env.exists == 'true'
+        if: ${{ env.exists == 'true' }}
         uses: docker/build-push-action@v6
         with:
           context: ./${{ matrix.service_path }}
