--- a/agent/requirements.txt
+++ b/agent/requirements.txt
@@ -1,5 +1,7 @@
-# Agentic RAG router dependencies
+# Kagent-native MCP server dependencies.
 # These are in addition to the shared/ module's transitive requirements
 # (pymilvus, sentence-transformers, torch, numpy).
 
-langgraph>=0.2.0
+fastmcp>=2.0.0
+pymilvus>=2.4.0
+sentence-transformers>=2.2.0
